# AlphaStarLaw

./: README.md
LegalKit-main/: .gitignore  benchmark.py  check_invalid.py  pyproject.toml  score_all.py  score_calculation.py  score_free_answer.py  score_multiple_choice.py  score_slection.py
LegalKit-main/data/CaseGen/prompt/: judgement.json
LegalKit-main/data/CaseGen/templates/: defense_judge_template.txt  fact_judge_template.txt  judgement_judge_template.txt  reasoning_judge_template.txt
LegalKit-main/data/JEC-QA/: 0_test.json  1_test.json
LegalKit-main/data/lawbench/zero_shot/: 1-2.json  2-2.json  2-3.json  2-4.json  2-5.json  2-8.json  3-1.json  3-2.json  3-3.json  3-4.json  3-5.json  3-6.json  3-7.json
LegalKit-main/data/lexeval/: 5_4.json.bak
LegalKit-main/data/lexeval/few_shot/: 1_1.jsonl  1_2.jsonl  1_3.jsonl  2_1.jsonl  2_2.jsonl  2_3.jsonl  2_4.jsonl  2_5.jsonl  3_1.jsonl  3_2.jsonl  3_3.jsonl  3_4.jsonl  3_5.jsonl  3_6.jsonl  4_1.jsonl  4_2.jsonl  5_1.jsonl  5_2.jsonl  5_3.jsonl  5_4.jsonl  6_1.jsonl  6_2.jsonl  (+1 more)
LegalKit-main/example/: config_jecqa.yaml  config_lexeval.yaml
LegalKit-main/legalkit/: __init__.py  judge.py  main.py  storage.py
LegalKit-main/legalkit/accelerator/: lmdeploy_backend.py  sglang_backend.py  vllm_backend.py
LegalKit-main/legalkit/datasets/: __init__.py  base.py  utils.py
LegalKit-main/legalkit/models/: __init__.py  api.py  base.py  huggingface.py  local.py
LegalKit-main/web/: README.md  app.py  check_service.py  config_examples.yaml  requirements.txt  test_web.py
LegalKit-main/web/templates/: index.html
(+35 files in other folders)
